networkpolicy/networkpolicy__basic_kafka_setup__minio__all__minio__ingress__ports__minio__nr54__lines15.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: minio--all--minio--ingress--ports--minio--nr54
  namespace: minio
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          stacktic.io/namespace: minio
